--- a/day00/ex00/basics.html
+++ b/day00/ex00/basics.html
@@ -6,25 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basics</title>
     <style>
-        div.images{
+        .images{
             display: inline-block;
+            width:49%;
         }
         p {
-            text-align: left;
+            text-align: center;
+        }
+        .footer
+        {
+            text-align: right;
+            font-family: monospace;
+            font-style: italic;
         }
     </style>
 </head>
 <body style="background : #FFC0CB;">
-    <h1 style="color : black; text-align: center">Hi !</h1>
+    <h1 style="color : white; text-align: center">Hi !</h1>
     <div class="images">
-        <img src="amazon.png" alt="amazon" height="500" width="500">
+        <img src="amazon-png.png" alt="amazon" width="100%">
         <p><a href="https://www.amazon.com/">amazon.com</a><p>
         </div>
     <div class= "images">
-        <img src="ebay.png" alt="ebay" height="500" width="500">
+        <img src="ebay-png.png" alt="ebay" width="100%">
         <p><a href="https://www.ebay.com/">ebay.com</a><p>
         </div>
     <hr>
-    <p>&copy; ahkhilad 2019</p>
+    <p class="footer">&copy; ahkhilad 2019</p>
 </body>
 </html>
