--- a/day00/ex00/basics.html
+++ b/day00/ex00/basics.html
@@ -24,11 +24,11 @@
 <body style="background : #FFC0CB;">
     <h1 style="color : white; text-align: center">Hi !</h1>
     <div class="images">
-        <img src="amazon-png.png" alt="amazon" width="100%">
+        <img src="http://pngtransparent.com/images/amazon-logo-png-2048x1536_abf78dd4.png" alt="amazon" width="100%">
         <p><a href="https://www.amazon.com/">amazon.com</a><p>
         </div>
     <div class= "images">
-        <img src="ebay-png.png" alt="ebay" width="100%">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/EBay_logo.png/800px-EBay_logo.png" alt="ebay" width="100%">
         <p><a href="https://www.ebay.com/">ebay.com</a><p>
         </div>
     <hr>
