--- a/day00/ex01/mendeleiev.html
+++ b/day00/ex01/mendeleiev.html
@@ -4,9 +4,405 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>mendeleiev</title>
+    <style>
+        table{
+            border: inherit;
+            width: 100%;
+        }
+        .text{
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .bor{
+            border: none;
+        }
+        td {
+                width: 40px;
+                height: 40px;
+                border: 1px solid black;
+                height: 10%;
+        }
+        h3{
+            margin: 0%;
+            padding: 1px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <table contenteditable="true">
+            <tr>
+                <td class="text">
+                    <div>
+                        <h3>1</h3>
+                        <h3>H</h3>
+                    </div>
+                </td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="text">
+                    <div>
+                        <h3>2</h3>
+                        <h3>He</h3>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td class="text">
+                    <div>
+                        <h3>3</h3>
+                        <h3>Li</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>4</h3>
+                        <h3>Be</h3>
+                    </div>
+                </td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="text">
+                    <div>
+                        <h3>5</h3>
+                        <h3>B</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>6</h3>
+                        <h3>C</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>7</h3>
+                        <h3>N</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>8</h3>
+                        <h3>O</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>9</h3>
+                        <h3>F</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>10</h3>
+                        <h3>Ne</h3>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td class="text">
+                    <div>
+                        <h3>11</h3>
+                        <h3>Na</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>12</h3>
+                        <h3>Mg</h3>
+                    </div>
+                </td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="bor"></td>
+                <td class="text">
+                    <div>
+                        <h3>13</h3>
+                        <h3>Al</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>14</h3>
+                        <h3>Si</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>15</h3>
+                        <h3>P</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>16</h3>
+                        <h3>S</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>17</h3>
+                        <h3>Cl</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>18</h3>
+                        <h3>Ar</h3>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td class="text">
+                    <div>
+                        <h3>19</h3>
+                        <h3>K</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>20</h3>
+                        <h3>Ca</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>21</h3>
+                        <h3>Sc</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>22</h3>
+                        <h3>Ti</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>23</h3>
+                        <h3>V</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>24</h3>
+                        <h3>Cr</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>25</h3>
+                        <h3>Mn</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>26</h3>
+                        <h3>Fe</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>27</h3>
+                        <h3>Co</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>28</h3>
+                        <h3>Ni</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>29</h3>
+                        <h3>Cu</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>30</h3>
+                        <h3>Zn</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>31</h3>
+                        <h3>Ga</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>32</h3>
+                        <h3>Ge</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>33</h3>
+                        <h3>As</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>34</h3>
+                        <h3>Se</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>35</h3>
+                        <h3>Br</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>36</h3>
+                        <h3>Kr</h3>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td class="text">
+                    <div>
+                        <h3>37</h3>
+                        <h3>Rb</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>38</h3>
+                        <h3>Sr</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>39</h3>
+                        <h3>Y</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>40</h3>
+                        <h3>Zr</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>41</h3>
+                        <h3>Nb</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>42</h3>
+                        <h3>Mo</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>43</h3>
+                        <h3>Tc</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>44</h3>
+                        <h3>Ru</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>45</h3>
+                        <h3>Rh</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>46</h3>
+                        <h3>Pd</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>47</h3>
+                        <h3>Ag</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>48</h3>
+                        <h3>Cd</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>49</h3>
+                        <h3>In</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>50</h3>
+                        <h3>Sn</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>51</h3>
+                        <h3>Sb</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>52</h3>
+                        <h3>Te</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>53</h3>
+                        <h3>I</h3>
+                    </div>
+                </td>
+                <td class="text">
+                    <div>
+                        <h3>54</h3>
+                        <h3>Xe</h3>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
