--- a/day00/ex03/responsive.html
+++ b/day00/ex03/responsive.html
@@ -4,68 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>mendeleiev</title>
-    <style>
-        table{
-            border: inherit;
-            width: 100%;
-        }
-        .text{
-            text-align: center;
-        }
-        .bor{
-            border: none;
-        }
-        .atomic{
-            text-align: right;
-            margin-right: 1px;
-            font-size: 9px;
-        }
-        .number{
-            text-align: left;
-            margin-left: 1px;
-            font-size: 9px;
-        }
-        .neon_green{
-            background-color: #49fb35;
-        }
-        .light_orange{
-            background-color: #ffa500;
-        }
-        .light_yellow{
-            background-color: #fff448;
-        }
-        .light_red{
-            background-color: #e6b0aa;
-        }
-        .light_pink{
-            background-color: #fa8072;
-        }
-        .light_purple{
-            background-color: #fbc3ff;
-        }
-        .light_grey{
-            background-color: #cdcdcd;
-        }
-        .light_green{
-            background-color: #9fe1cb;
-        }
-        .green{
-            background-color: #71d997;
-        }
-        .light_blue{
-            background-color: #6ad0eb;
-        }
-        td {
-                width: 45px;
-                height: 45px;
-                border: 1px solid black;
-                padding: 0px;
-        }
-        body{
-            background-image: url(https://xbooklet.com/img/package/a39bb570d93a552570203e9a51598637.jpg);
-        }
-    </style>
+    <title>responsive</title>
+    <link rel="stylesheet" type = "text/css" href = "responsive.css">
+
 </head>
 <body>
     <div>
