--- a/day00/ex02/doft.html
+++ b/day00/ex02/doft.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Doft</title>
+    <title>Day Of The 42</title>
     <link rel="stylesheet" type="text/css" href="doft.css" />
 </head>
 <body>
@@ -35,11 +33,10 @@
             <div id="brick"></div>
         </div>
         <div class="bottom_box">
-                <form>
-                    <span class="bonjour">Vous <span class="entrez">entrez</span> alors dans une grande piece remplie d'<span class="text_shadow">ordinateurs</span>...<br><i>- Bonjour, vous êtes nouveau ici ?</i></span><br>
-                    <input type="text" name="fname" style="width:75%">
-                    <input type="submit" value="Repondre">
-                </form>
+            <p class="bonjour">Vous <span class="entrez">entrez</span> alors dans une grande piece remplie <div class="bonjour">d'<span class="text_shadow">ordinateurs</span>...</div></p>
+            <div class="bonjour"><i>- Bonjour, vous êtes nouveau ici ?</i></div>
+            <input type="text">
+            <button>Repondre</button>
         </div>
     </div>
 </body>
