--- a/day04/ex01/index.html
+++ b/day04/ex01/index.html
@@ -2,8 +2,9 @@
 <html>
     <body>
         <form action="create.php" name="create.php" method="POST">
-            Username: <input type="text" name="login"/><br />
-            Password: <input type="password" name="passwd"/><br>
+            Username: <input type="text" name="login"/>
+            <br />
+            Password: <input type="password" name="passwd"/>
             <input type="submit" name="submit" value="OK"/>
         </form>
     </body>
